--- a/inventario/templates/inventario/detail.html
+++ b/inventario/templates/inventario/detail.html
@@ -11,5 +11,6 @@
         <li>{{ pc.responsable }}</li>
         <li>{% endif %}</li>
     {% endfor %}
+    {% include 'inventario/infoCOmponent.html' %}
 {% endblock %}
 
