arreglando la parte de las Areas
arreglando la parte de las Areas

--- a/inventario/templates/inventario/detail.html
+++ b/inventario/templates/inventario/detail.html
@@ -1,16 +1,31 @@
 {% extends 'layout.html' %}
+{% load static %}
 
 {% block content %}
     {{ area }}
-
-    {% for pc in pc %}
-        {% if pc.area.id == area.id %}
-        <li>{{ pc.SO }}</li>
-        <li><a href="/pc/{{ pc.id }}">{{ pc.numeroDeInventario }}</a></li>
-        <li>{{ pc.enRed }}</li>
-        <li>{{ pc.responsable }}</li>
-        <li>{% endif %}</li>
-    {% endfor %}
+{#    {{ pc }}#}
     {% include 'inventario/infoCOmponent.html' %}
+    <div class="container-fluid">
+        <div class="row">
+            {% for pc in pc %}
+                <div class="col">
+                    <div class="card" style="width: 13rem; border: none">
+                        <img src="{% static 'inventario/img/area/016-pc.png' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text text-center">NO Inventario <span
+                                    class="badge badge-primary"> {{ pc.numeroDeInventario }}</span>
+                            </p>
+                            <p class="card-text text-center">Sistema Operativo: {{ pc.SO }}</p>
+                            <p class="card-text text-center">Responsable: {{ pc.responsable }}</p>
+                            <p class="card-text text-center">En red: {{ pc.enRed }}</p>
+                            <a href="/pc/{{ pc.id }}" class="btn btn-primary" style="margin: auto">Ver</a>
+                        </div>
+                    </div>
+                </div>
+
+            {% endfor %}
+
+        </div>
+    </div>
 {% endblock %}
 
