--- a/inventario/templates/inventario/pc_component.html
+++ b/inventario/templates/inventario/pc_component.html
@@ -4,9 +4,8 @@
     {% load static %}
     {{ pc }}
     {{ cpu }}
-    {% if ram %}
         {{ ram }}
-    {% endif %}
+{{ impresora.noSerie }}
     <div class="container">
         <div class="row">
             {% for cpu in cpu %}
