--- a/inventario/static/inventario/css/main.css
+++ b/inventario/static/inventario/css/main.css
@@ -3,6 +3,8 @@ body {
     background: linear-gradient(90deg, rgba(186,75,11,1) 0%, rgba(221,120,83,0.9923319669664741) 40%, rgba(255,142,3,1) 100%);
 }
 
+
+
 .card {
     background: inherit;
     color: aliceblue;
@@ -16,4 +18,14 @@ nav {
 .col {
     padding-right: 40px;
     padding-left: 40px;
+}
+
+.mycard {
+    width: 13rem !important;
+    border: none !important;
+}
+
+.myimg {
+    width: 9rem;
+    margin: auto;
 }
