agregando detalles de diseño

--- a/inventario/templates/inventario/infoCOmponent.html
+++ b/inventario/templates/inventario/infoCOmponent.html
@@ -4,7 +4,7 @@
         <div class="col">
             <div class="card" style="border: none">
                 <img src="{% static 'inventario/img/index/juego-de-azar.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body text-center">
                     <h5 class="card-title text-center" style="color: aliceblue">Computadoras</h5>
                     <p class="card-text text-center">Cantidad <span class="badge badge-primary"> {{ cantidadpc }}</span>
                     </p>
@@ -14,7 +14,7 @@
         <div class="col">
             <div class="card" style="border: none">
                 <img src="{% static 'inventario/img/index/impresora (1).png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body text-center">
                     <h5 class="card-title text-center">Impresoras</h5>
                     <p class="card-text text-center">Cantidad <span
                             class="badge badge-primary"> {{ cantidadImpresora }}</span></p>
@@ -24,7 +24,7 @@
         <div class="col">
             <div class="card" style="border: none">
                 <img src="{% static 'inventario/img/index/servidor.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body text-center">
                     <h5 class="card-title text-center">Computadoras en Red</h5>
                     <p class="card-text text-center">Cantidad <span class="badge badge-primary"> {{ PcRed }}</span></p>
                 </div>
