--- a/inventario/templates/inventario/area_detail.html
+++ b/inventario/templates/inventario/area_detail.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block content %}
-    {{ area }}
-{#    {{ pc }}#}
+    <h3 class="text-center mytitle">{{ area }}</h3>
     {% include 'inventario/infoCOmponent.html' %}
     <div class="container-fluid">
         <div class="row">
