--- a/inventario/templates/inventario/region_detail.html
+++ b/inventario/templates/inventario/region_detail.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Region Detail</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+    <h3 class="text-center mytitle">{{ region_actual.nombre }}</h3>
+    {% include 'inventario/infoCOmponent.html' %}
+{% endblock %}
+
