agregando detalles de diseño

--- a/inventario/templates/inventario/nav.html
+++ b/inventario/templates/inventario/nav.html
@@ -71,6 +71,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/admin" tabindex="-1">Admin</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/pc/list" tabindex="-1">Computadoras</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
