--- a/inventario/static/inventario/css/main.css
+++ b/inventario/static/inventario/css/main.css
@@ -1,8 +1,9 @@
 body {
-    background: rgb(186,75,11);
-    background: linear-gradient(90deg, rgba(186,75,11,1) 0%, rgba(221,120,83,0.9923319669664741) 40%, rgba(255,142,3,1) 100%);
+    /*background: rgb(186,75,11);*/
+    /*background: linear-gradient(90deg, rgba(186,75,11,1) 0%, rgba(221,120,83,0.9923319669664741) 40%, rgba(255,142,3,1) 100%);*/
+    background: rgb(43, 174, 208);
+    background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);
 }
-
 
 
 .card {
@@ -10,9 +11,10 @@ body {
     color: aliceblue;
     margin: auto;
 }
+
 nav {
-    background: rgb(186,75,11);
-    background: linear-gradient(90deg, rgba(186,75,11,1) 0%, rgba(221,120,83,0.9923319669664741) 40%, rgba(255,142,3,1) 100%);
+    background: rgb(43, 174, 208);
+    background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);
 }
 
 .col {
@@ -29,6 +31,7 @@ nav {
     width: 9rem;
     margin: auto;
 }
+
 .mytitle {
-        color: aliceblue;
+    color: aliceblue;
 }
