--- a/inventario/static/inventario/css/main.css
+++ b/inventario/static/inventario/css/main.css
@@ -1,20 +1,22 @@
 body {
     /*background: rgb(186,75,11);*/
     /*background: linear-gradient(90deg, rgba(186,75,11,1) 0%, rgba(221,120,83,0.9923319669664741) 40%, rgba(255,142,3,1) 100%);*/
-    background: rgb(43, 174, 208);
-    background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);
+    /*background: rgb(43, 174, 208);*/
+    /*background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);*/
 }
 
 
 .card {
     background: inherit;
-    color: aliceblue;
+    color: black;
     margin: auto;
 }
 
 nav {
-    background: rgb(43, 174, 208);
-    background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);
+    background: #417690 !important;
+    /*background: radial-gradient(circle, rgba(43, 174, 208, 1) 0%, rgba(17, 111, 222, 1) 100%);*/
+    color: black;
+
 }
 
 .col {
@@ -33,5 +35,5 @@ nav {
 }
 
 .mytitle {
-    color: aliceblue;
+    color: black;
 }
