--- a/inventario/templates/inventario/infoCOmponent.html
+++ b/inventario/templates/inventario/infoCOmponent.html
@@ -5,7 +5,7 @@
             <div class="card" style="border: none">
                 <img src="{% static 'inventario/img/index/juego-de-azar.png' %}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-center" style="color: aliceblue">Computadoras</h5>
+                    <h5 class="card-title text-center">Computadoras</h5>
                     <p class="card-text text-center">Cantidad <span class="badge badge-primary"> {{ cantidadpc }}</span>
                     </p>
                 </div>
