--- a/inventario/templates/inventario/index.html
+++ b/inventario/templates/inventario/index.html
@@ -4,4 +4,6 @@
 {% block content %}
     {% include 'inventario/infoCOmponent.html' %}
 {#    {{ user.has_perm() }}#}
+{#    como se manejan los permisos en django #}
+{#    {{ perms.inventario.change_mouse }}#}
 {% endblock %}
