--- a/inventario/templates/inventario/nav.html
+++ b/inventario/templates/inventario/nav.html
@@ -22,6 +22,7 @@
                     {% endfor %}
                 </div>
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
@@ -45,29 +46,29 @@
             {#                    {% endif %}#}
             {#                </ul>#}
             {#            </div>#}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Componentes
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="bocinas">Bocinas</a>
-                    <a class="dropdown-item" href="#">Cpu</a>
-                    <a class="dropdown-item" href="#">Estabilizadores</a>
-                    <a class="dropdown-item" href="#">Fuentes Internas</a>
-                    <a class="dropdown-item" href="#">HDD</a>
-                    <a class="dropdown-item" href="#">Impresoras</a>
-                    <a class="dropdown-item" href="#">Lectores</a>
-                    <a class="dropdown-item" href="#">Monitores</a>
-                    <a class="dropdown-item" href="#">Motherboards</a>
-                    <a class="dropdown-item" href="#">Mouses</a>
-                    <a class="dropdown-item" href="#">Ram</a>
-                    <a class="dropdown-item" href="#">Targetas de Red</a>
-                    <a class="dropdown-item" href="#">Targetas de Video</a>
-                    <a class="dropdown-item" href="#">Teclados</a>
-                    <a class="dropdown-item" href="#">UPS</a>
-                </div>
-            </li>
+            {#            <li class="nav-item dropdown">#}
+            {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"#}
+            {#                   aria-haspopup="true" aria-expanded="false">#}
+            {#                    Componentes#}
+            {#                </a>#}
+            {#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
+            {#                    <a class="dropdown-item" href="bocinas">Bocinas</a>#}
+            {#                    <a class="dropdown-item" href="#">Cpu</a>#}
+            {#                    <a class="dropdown-item" href="#">Estabilizadores</a>#}
+            {#                    <a class="dropdown-item" href="#">Fuentes Internas</a>#}
+            {#                    <a class="dropdown-item" href="#">HDD</a>#}
+            {#                    <a class="dropdown-item" href="#">Impresoras</a>#}
+            {#                    <a class="dropdown-item" href="#">Lectores</a>#}
+            {#                    <a class="dropdown-item" href="#">Monitores</a>#}
+            {#                    <a class="dropdown-item" href="#">Motherboards</a>#}
+            {#                    <a class="dropdown-item" href="#">Mouses</a>#}
+            {#                    <a class="dropdown-item" href="#">Ram</a>#}
+            {#                    <a class="dropdown-item" href="#">Targetas de Red</a>#}
+            {#                    <a class="dropdown-item" href="#">Targetas de Video</a>#}
+            {#                    <a class="dropdown-item" href="#">Teclados</a>#}
+            {#                    <a class="dropdown-item" href="#">UPS</a>#}
+            {#                </div>#}
+            {#            </li>#}
             <li class="nav-item">
                 <a class="nav-link" href="/admin" tabindex="-1">Admin</a>
             </li>
@@ -75,9 +76,5 @@
                 <a class="nav-link" href="/pc/list" tabindex="-1">Computadoras</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
