--- a/inventario/templates/inventario/pc_list.html
+++ b/inventario/templates/inventario/pc_list.html
@@ -3,16 +3,15 @@
 {% load static %}
 
 {% block content %}
-{{ pc }}
     <form action="/pc/list" method="POST">
         <h3>Pc por numero de Inventario:</h3>
-        <input  name="inventario" value="0" style="width:40px">
+        <input name="inventario" value="0" style="width:40px">
         <input type="submit" value="Filtrar">
         {% csrf_token %}
     </form>
     <form action="/pc/list" method="POST">
         <h3>Pc por So:</h3>
-        <input  name="so" value="Windos xp">
+        <input name="so" value="Windows Xp">
         <input type="submit" value="Filtrar">
         {% csrf_token %}
     </form>
