--- a/inventario/templates/inventario/pc_component.html
+++ b/inventario/templates/inventario/pc_component.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% load static %}
 {% block content %}
+    <form action=""></form>
     <div class="container-fluid mt-4">
         <div class="row">
             {% if cpu %}
